# ECMS

./: CMakeLists.txt  Channel.cpp  Channel.h  ECMS.cpp  ECMS.h  Mixer.cpp  Mixer.h  README.md  TODO.md  Window.cpp  Window.h  demo.sps  f.sps  ffff.sps  goof.sps  newTest.sps  pom.xml  vcpkg-configuration.json  vcpkg.json
sps/: Note.java  SPS.java  spsTest.java
src/main/java/: module-info.java  package.bluej
src/main/java/net/badmidi/ecms/: App.java  AppController.java  HelloApplication.java  HelloController.java
src/main/java/net/badmidi/ecms/sps/: Note.java  SPS.java  SPSFile.java  readme.md  spsTest.java
src/main/resources/net/badmidi/ecms/: hello-view.fxml
